@startuml classes
set namespaceSeparator none
class "DB_Handler" as main.DB_Handler {
  connection : NoneType
  current_date_str
  data_dir : Path
  db_name : str
  close()
  connect()
  create_table()
  write(parsed_data)
}
class "Serial_handler" as main.Serial_handler {
  baudrate : int
  connection : NoneType, Serial
  close()
  connect(port_name)
  list_ports()
}
class "Ui" as main.Ui {
  data_buffer : str
  db
  is_scanning : bool
  label : Label
  port_frame : Frame
  port_selector : Combobox
  read_thread : NoneType, Thread
  refresh_button : Button
  root : Tk
  serial
  start_button : Button
  stop_button : Button
  on_button_click() -> None
  on_stop_click() -> None
  parse_payload(packet: str)
  refresh_ports() -> None
  run() -> None
}
main.DB_Handler --* main.Ui : db
main.Serial_handler --* main.Ui : serial
@enduml
